앨범 디테일 빈값 수정

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -1553,6 +1553,7 @@
         // flex-direction: column;
         // align-items: start;
         gap: 16px;
+        justify-content: space-between;
       }
       .album__content-list__list {
         grid-template-columns: repeat(1, 1fr);
