--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -875,6 +875,7 @@
               padding: 11px 16px 11px 24px;
               max-height: 54px;
               overflow: auto;
+              min-height: 32px;
                 font{
                   font-family: inherit !important;
                   font-size: inherit !important;
