--- a/src/components/unit/EvaluationListItem.scss
+++ b/src/components/unit/EvaluationListItem.scss
@@ -52,6 +52,7 @@
       border-radius: 2px;
       transition: 0.3s;
       position: relative;
+      flex-shrink: 0;
       img {
         width: 100%;
         height: 100%;
