--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -6,33 +6,12 @@
   background-size: cover;
   border-radius: 12px;
   .create__get-started--title {
-    color: #cf0;
-    font-family: Pretendard700;
-    font-size: 40px;
+    color: #fff;
+    font-family: Pretendard800;
+    font-size: 24px;
     letter-spacing: 1.2px;
-    margin-bottom: 40px;
-    font{
-      color: inherit !important;
-      font-family: inherit !important;
-      font-size: inherit !important;
-      font-weight: inherit !important;
-      line-height: inherit !important;
-      font-style: inherit !important;
-      letter-spacing: inherit !important;
-      word-spacing: inherit !important;
-      font-variant: inherit !important;
-      text-transform: inherit !important;
-      text-rendering: inherit !important;
-      -webkit-font-smoothing: inherit !important;
-    }
-  }
-  .create__get-started--subtitle {
-    color: #aaa;
-    font-family: Pretendard600;
-    font-size: 32px;
-    letter-spacing: 0.96px;
-    margin-bottom: 40px;
-    font{
+    margin-bottom: 12px;
+    font {
       color: inherit !important;
       font-family: inherit !important;
       font-size: inherit !important;
@@ -209,6 +188,8 @@
   }
 }
 .create__get-started--version {
+  width: 100%;
+
   &.active {
     .create__get-started--version__select__title {
       border: 1px solid #cf0 !important;
@@ -229,19 +210,19 @@
     }
   }
   .create__get-started--version__title {
-    color:#f1f1f1;
+    color: #f1f1f1;
     font-family: Pretendard700;
     font-size: 16px;
     margin-bottom: 16px;
-      font  { 
-          font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
+    font {
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
   } //create__get-started--version__title--END--
   .create__get-started--version__select {
     position: relative;
@@ -251,7 +232,7 @@
       border: 1px solid #383838;
       background: #0b0b0c;
       height: 54px;
-      color:#f1f1f1;
+      color: #f1f1f1;
       font-family: Pretendard400;
       font-size: 14px;
       display: flex;
@@ -272,8 +253,8 @@
         background-size: cover;
         transition: 0.3s;
       }
-      font     {
-         font-family: inherit !important;
+      font {
+        font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
         line-height: inherit !important;
@@ -281,7 +262,7 @@
         color: inherit !important;
         letter-spacing: inherit !important;
       }
-    }//create__get-started--version__select__title--END--
+    } //create__get-started--version__select__title--END--
     .create__get-started--version__select__list {
       width: 100%;
       background: #0b0b0c;
@@ -319,7 +300,7 @@
   flex-direction: column;
   margin-bottom: 16px;
   label {
-    color:#aaa;
+    color: #aaa;
     font-family: Pretendard400;
     font-size: 14px;
     margin-bottom: 8px;
@@ -328,7 +309,7 @@
     border-radius: 8px;
     background: #222;
     padding: 8px;
-    color:#565656;
+    color: #565656;
   }
 }
 .create__get-started--format {
@@ -365,7 +346,7 @@
       font-family: Pretendard700;
       font-size: 16px;
       margin-bottom: 12px;
-      font  {
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -379,7 +360,7 @@
       color: #565656;
       font-family: Pretendard400;
       font-size: 14px;
-        font  {
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -394,7 +375,7 @@
         color: #565656;
         font-family: Pretendard400;
         font-size: 14px;
-        font  {
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
@@ -402,19 +383,19 @@
           font-style: inherit !important;
           color: inherit !important;
           letter-spacing: inherit !important;
-      }
+        }
       }
     }
     .create__get-started--format-item-select {
       border-radius: 8px;
       background: #222;
       padding: 8px;
-      color:#565656;
+      color: #565656;
       font-family: Pretendard400;
       font-size: 14px;
       margin-top: 16px;
       .create__get-started--format-item-select-title {
-        color:#aaa;
+        color: #aaa;
         font-family: Pretendard400;
         font-size: 14px;
       }
@@ -432,12 +413,18 @@
     } //create__get-started--format-item-select--END--
   } //create__get-started--format-item--END--
 } //create__get-started--format--END--
+
+.create__get-started--radio-box-item {
+  display: flex;
+  gap: 30px;
+}
+
 .create__get-started {
   .create__btn {
     .create__get-started--button {
       width: 100%;
       margin-top: 16px;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -464,11 +451,11 @@
     gap: 12px;
 
     h3 {
-      color: #f1f1f1;
-      font-family: Pretendard600;
-      font-size: 16px;
-      margin-bottom: 8px;
-      font{
+      color: #fff;
+      font-family: Pretendard700;
+      font-size: 20px;
+      line-height: 30px; /* 150% */
+      font {
         color: inherit !important;
         font-family: inherit !important;
         font-size: inherit !important;
@@ -483,30 +470,60 @@
         -webkit-font-smoothing: inherit !important;
       }
     }
+    .create__get-started--radio-box-item-content {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
 
-    .privacy-option,
     .creation-mode-options {
       display: flex;
-      padding: 9px 20px;
-      justify-content: center;
+      max-width: 500px;
+      width: 366px;
+      height: 186px;
+      padding: 30px 80px;
+      flex-direction: column;
       align-items: center;
-      gap: 12px;
-      border-radius: 12px;
-      background:#1a1a1a;
-      width: 360px;
-      font{
+      gap: 24px;
+      flex: 1 0 0;
+      border-radius: 20px;
+      border: 1px solid var(--White-10, rgba(255, 255, 255, 0.1));
+      background: var(--White-05, rgba(255, 255, 255, 0.05));
+
+      &.version-selection {
+        min-width: 366px;
+        padding: 30px 20px;
+      }
+      font {
         color: inherit !important;
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
         line-height: inherit !important;
         font-style: inherit !important;
-        letter-spacing: inherit !important; 
+        letter-spacing: inherit !important;
         word-spacing: inherit !important;
         font-variant: inherit !important;
         text-transform: inherit !important;
         text-rendering: inherit !important;
         -webkit-font-smoothing: inherit !important;
+      }
+      .create__get-started--radio-box-item-icon {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        img {
+          width: 24px;
+          height: 24px;
+          margin-bottom: 12px;
+        }
+        .create__get-started--radio-box-item-icon-title {
+          color: #fff;
+          font-family: Pretendard700;
+          font-size: 18px;
+          font-style: normal;
+          line-height: 28px; /* 155.556% */
+        }
       }
     }
 
@@ -527,7 +544,7 @@
         padding: 0;
 
         &:checked {
-          border-color: #cf0;
+          border-color: #fff;
 
           &::after {
             content: '';
@@ -537,7 +554,7 @@
             transform: translate(-50%, -50%);
             width: 10px;
             height: 10px;
-            background-color: #cf0;
+            background-color: #fff;
             border-radius: 50%;
           }
         }
@@ -556,8 +573,7 @@
 @media screen and (max-width: 1300px) {
   .create__get-started--radio-box {
     flex-direction: column;
-    .created__get-started--privacy,
-    .created__get-started--creation-mode {
+    .created__get-started--privacy {
       width: 100%;
       .privacy-option,
       .creation-mode-options {
@@ -587,9 +603,6 @@
     margin-top: 32px;
     .create__get-started--title {
       font-size: 28px;
-    }
-    .create__get-started--subtitle {
-      font-size: 18px;
     }
   }
   .create__get-started--format {
