--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -327,7 +327,7 @@
   }
   .create__get-started--format-container {
     display: flex;
-    justify-content: space-between;
+    gap: 30px;
   }
   .create__get-started--format-item {
     width: 565px;
