--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -1,9 +1,10 @@
 .create__get-started {
   padding: 32px 100px 100px;
-  background-image: url('../../assets/images/create/bg.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+
+  // background-image: url('../../assets/images/create/bg.png');
+  // background-repeat: no-repeat;
+  // background-position: center;
+  // background-size: cover;
   border-radius: 12px;
   .create__get-started--title {
     color: #fff;
