--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -1,6 +1,6 @@
 .create__get-started {
   display: flex;
-  padding: 40px 430px 0px 30px;
+  padding: 40px 30px 0px 30px;
   flex-direction: column;
   align-items: flex-start;
   gap: 40px;
@@ -32,27 +32,6 @@
       }
     }
   }
-  // .create__get-started--subtitle {
-  //   color: #aaa;
-  //   font-family: Pretendard600;
-  //   font-size: 32px;
-  //   letter-spacing: 0.96px;
-  //   margin-bottom: 40px;
-  //   font {
-  //     color: inherit !important;
-  //     font-family: inherit !important;
-  //     font-size: inherit !important;
-  //     font-weight: inherit !important;
-  //     line-height: inherit !important;
-  //     font-style: inherit !important;
-  //     letter-spacing: inherit !important;
-  //     word-spacing: inherit !important;
-  //     font-variant: inherit !important;
-  //     text-transform: inherit !important;
-  //     text-rendering: inherit !important;
-  //     -webkit-font-smoothing: inherit !important;
-  //   }
-  // }
 
   .create__get-started--features {
     margin-bottom: 40px;
@@ -82,6 +61,7 @@
   }
   .create__btn {
     width: 100%;
+    max-width: 1160px;
     height: auto;
     .create__get-started--button {
       display: flex;
@@ -400,15 +380,18 @@
       cursor: pointer;
       position: relative;
       padding-top: 50px; // 아이콘 들어갈 여백
+      overflow: hidden;
       &.active {
         border: 1px solid #fff;
         .create__get-started--format-item-icon {
           position: absolute;
           top: -13px;
           right: 20px;
-          width: 182px;
-          height: 182px;
+          width: 166px;
+          height: 166px;
           aspect-ratio: 1/1;
+          transform: translate(-10px, 10px); // → 왼쪽/아래로 이동
+          transition: all 0.3s ease;
         }
         .create__get-started--format-item-title {
           color: #fff;
@@ -423,19 +406,14 @@
           font-size: 14px;
           font-style: normal;
           line-height: 22px;
-          // span {
-          //   color: #aaa;
-          //   font-family: Pretendard400;
-          //   font-size: 14px;
-          // }
         }
       }
       .create__get-started--format-item-icon {
         position: absolute;
         top: -13px;
         right: 20px;
-        width: 182px;
-        height: 182px;
+        width: 166px;
+        height: 166px;
         aspect-ratio: 1/1;
       }
       .create__get-started--format-item-title {
@@ -517,6 +495,7 @@
 .create__get-started {
   .create__btn {
     width: 100%;
+    max-width: 1160px;
     height: auto;
     .create__get-started--button {
       width: 100%;
@@ -674,52 +653,166 @@
   }
 }
 // 반응형 임시 코드
-@media screen and (max-width: 1300px) {
-  .create__get-started--radio-box {
-    flex-direction: column;
-    .created__get-started--privacy,
-    .created__get-started--creation-mode {
+// @media screen and (max-width: 1300px) {
+//   .create__get-started--radio-box {
+//     flex-direction: column;
+//     .created__get-started--privacy,
+//     .created__get-started--creation-mode {
+//       width: 100%;
+//       .privacy-option,
+//       .creation-mode-options {
+//         width: 100%;
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 768px) {
+//   .privacy-option,
+//   .creation-mode-options {
+//     width: 100% !important;
+//   }
+
+//   .create__get-started--version {
+//     &.active {
+//       .create__get-started--version__select {
+//         .create__get-started--version__select__list {
+//           height: 162px !important;
+//         }
+//       }
+//     }
+//   }
+//   .create__get-started {
+//     padding: 0px 32px 64px;
+//     margin-top: 32px;
+//     .create__get-started--title {
+//       font-size: 28px;
+//     }
+//     .create__get-started--subtitle {
+//       font-size: 18px;
+//     }
+//   }
+//   .create__get-started--format {
+//     flex-direction: column;
+//   }
+//   .create__get-started--radio-box {
+//     margin: 20px 0;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 16px;
+//   }
+// }
+@media screen and (max-width: 1228px) {
+  .create__get-started {
+    padding: 0px 30px 64px;
+
+    .create__get-started--radio-box {
+      flex-direction: column;
+      gap: 16px;
+
+      .created__get-started--radio-box-group {
+        flex-direction: column;
+        gap: 16px;
+
+        .created__get-started--privacy,
+        .created__get-started--creation-mode,
+        .created__get-started--version {
+          width: 100%;
+          box-sizing: border-box;
+        }
+      }
+    }
+
+    .create__get-started--format {
       width: 100%;
-      .privacy-option,
-      .creation-mode-options {
+      .create__get-started--format-item-group {
+        flex-direction: column;
+        gap: 16px;
+
+        .create__get-started--format-item {
+          width: 100%;
+          padding: 30px;
+          box-sizing: border-box;
+        }
+      }
+    }
+
+    .create__btn {
+      width: 100%;
+      max-width: 1160px;
+
+      .create__get-started--button {
         width: 100%;
+      }
+
+      .tw-connect-wallet {
+        width: 100%;
+        margin-top: 16px;
       }
     }
   }
 }
 
 @media screen and (max-width: 768px) {
-  .privacy-option,
-  .creation-mode-options {
-    width: 100% !important;
-  }
-
-  .create__get-started--version {
-    &.active {
-      .create__get-started--version__select {
-        .create__get-started--version__select__list {
-          height: 162px !important;
-        }
-      }
-    }
-  }
   .create__get-started {
-    padding: 0px 32px 64px;
+    padding: 0px 30px 64px;
     margin-top: 32px;
+
     .create__get-started--title {
       font-size: 28px;
     }
+
     .create__get-started--subtitle {
       font-size: 18px;
     }
-  }
-  .create__get-started--format {
-    flex-direction: column;
-  }
-  .create__get-started--radio-box {
-    margin: 20px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+
+    .create__get-started--radio-box {
+      margin: 20px 0;
+      flex-direction: column;
+      gap: 16px;
+
+      .created__get-started--radio-box-group {
+        flex-direction: column;
+        gap: 16px;
+
+        .created__get-started--privacy,
+        .created__get-started--creation-mode,
+        .created__get-started--version {
+          width: 100%;
+          padding: 0;
+          box-sizing: border-box;
+        }
+      }
+    }
+
+    .create__get-started--format {
+      width: 100%;
+      padding: 0;
+      .create__get-started--format-item-group {
+        flex-direction: column;
+        gap: 16px;
+        width: 100%;
+
+        .create__get-started--format-item {
+          width: 100%;
+          padding: 30px;
+          box-sizing: border-box;
+        }
+      }
+    }
+
+    .create__btn {
+      width: 100%;
+      max-width: 1160px;
+
+      .create__get-started--button {
+        width: 100%;
+      }
+
+      .tw-connect-wallet {
+        margin-top: 16px;
+        width: 100%;
+      }
+    }
   }
 }
