--- a/src/components/LyricsModal.scss
+++ b/src/components/LyricsModal.scss
@@ -1,41 +1,45 @@
+.modal-wrap {
+  &.lyrics {
+    .modal-content-box {
+      max-width: 500px;
+      max-height: 680px;
+      .modal-content {
+        // font-size: 14px;
+        // padding: 24px;
+        // border: 1px solid #222;
+        // background: #121212;
+        // white-space: normal;
+        // overflow-wrap: break-word;
+        // word-break: break-word;
+        // display: -webkit-box;
+        // max-height: 600px;
 
-
-
-
-
-
-
-
-
-.modal-wrap{
-  &.lyrics{
-    .modal-content-box{
-      max-width: 800px;
-      .modal-content{
-        font-size: 14px;
-        padding: 24px;
-        border: 1px solid #222;
-        background: #121212;
-        white-space: normal;      
-        overflow-wrap: break-word;
-        word-break: break-word;   
-        display: -webkit-box;  
-        max-height: 600px;
-        overflow-y: auto;
-          font {
-            font-family:  inherit !important;
-            font-size: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-            font-style: inherit !important;
-            color: inherit !important;
-            letter-spacing: inherit !important;
-          }
-        .lyrics__content{
+        display: flex;
+        width: 500px;
+        height: 680px;
+        padding: 30px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 30px;
+        flex-shrink: 0;
+        border-radius: 24px;
+        border: 1px solid var(--White-05, rgba(255, 255, 255, 0.05));
+        background: var(--Grey-900, #181818);
+        overflow-y: hidden;
+        font {
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
+        }
+        .lyrics__content {
           background: transparent;
           width: 100%;
         }
       }
     }
   }
-}//.modal-wrap--END--
+} //.modal-wrap--END--
